--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ MONGODB_URL=mongodb://localhost:27017/walkwise-dev
 MONGODB_CLOUDURL=mongodb+srv://root:Password%40123@cluster0.mghfwnr.mongodb.net/walkwise
 JWT_SECRET=SECRET
 SMS_API_KEY=1e412006-1ec4-4942-8241-fc5dc8cd5619
+SESSION_SECRET=SECRET
 
 
 
